# copilot-verifier

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  cabal.project
.github/: ci.sh
.github/workflows/: ci.yaml
copilot-verifier/: CHANGELOG  CHANGELOG.md  copilot-verifier.cabal
copilot-verifier-demo/: .gitignore  copilot-verifier-demo.cabal  demo1-driver.c  demo2-driver.c
copilot-verifier-demo/src/: Demo1.hs  Demo2.hs  Demo3.hs
copilot-verifier/examples/Copilot/Verifier/: Examples.hs
copilot-verifier/examples/Copilot/Verifier/Examples/: Arith.hs  Array.hs  Clock.hs  Counter.hs  Engine.hs  FPOps.hs  Heater.hs  IntOps.hs  Structs.hs  Voting.hs  WCV.hs
copilot-verifier/examples/Copilot/Verifier/Examples/ShouldFail/: UnderConstrained.hs
copilot-verifier/examples/Copilot/Verifier/Examples/ShouldFail/Partial/: AbsIntMin.hs  AddSignedWrap.hs  DivByZero.hs  IndexOutOfBounds.hs  ModByZero.hs  MulSignedWrap.hs  ShiftLTooLarge.hs  ShiftRTooLarge.hs  SubSignedWrap.hs
copilot-verifier/examples/Copilot/Verifier/Examples/ShouldPass/: Arith.hs  Array.hs  ArrayGen.hs  ArrayOfStructs.hs  Clock.hs  Counter.hs  Engine.hs  FPOps.hs  Heater.hs  IntOps.hs  Structs.hs  Voting.hs  WCV.hs
copilot-verifier/exe/: Arith.hs  Clock.hs  Counter.hs  Engine.hs  Heater.hs  VerifyExamples.hs  Voting.hs
copilot-verifier/src/Copilot/: Verifier.hs
copilot-verifier/src/Copilot/Verifier/: Log.hs
copilot-verifier/test/: Test.hs
