Cabal-version: 2.2
Name:          copilot-verifier
Version:       0.0
Author:        Galois Inc.
Maintainer:    rdockins@galois.com
Copyright:     (c) Galois, Inc 2021
License:       BSD-3-Clause
License-file:  LICENSE
Build-type:    Simple
Category:      Language
Synopsis:      System for verifying the correctness of generated Copilot programs
Description:

common bldflags
  ghc-options: -Wall
               -Werror=incomplete-patterns
               -Werror=missing-methods
               -Werror=overlapping-patterns
               -Wpartial-fields
               -Wincomplete-uni-patterns
  ghc-prof-options: -O2 -fprof-auto-top
  default-language: Haskell2010
  default-extensions:
     NondecreasingIndentation
  build-depends:
    aeson >= 1.5 && < 2.1,
    base >= 4.8 && < 4.15,
    bv-sized >= 1.0.0 && < 1.1,
    bytestring,
    containers >= 0.5.9.0,
    copilot >= 3.5,
    copilot-c99 >= 3.5,
    copilot-core >= 3.5,
    copilot-libraries >= 3.5,
    copilot-language >= 3.5,
    copilot-theorem >= 3.5,
    crucible,
    crucible-llvm,
    crux,
    crux-llvm,
    filepath,
    lens,
    llvm-pretty,
    mtl,
    panic >= 0.3,
    parameterized-utils >= 2.1.4 && < 2.2,
    prettyprinter >= 1.7.0,
    text,
    transformers,
    vector,
    what4 >= 0.4

library
  import: bldflags

  hs-source-dirs: src
  exposed-modules:
    Copilot.Verifier
    Copilot.Verifier.Log

library copilot-verifier-examples
  import: bldflags

  hs-source-dirs: examples
  build-depends:
    case-insensitive,
    copilot-verifier
  exposed-modules:
    Copilot.Verifier.Examples
    Copilot.Verifier.Examples.Array
    Copilot.Verifier.Examples.Arith
    Copilot.Verifier.Examples.Clock
    Copilot.Verifier.Examples.Counter
    Copilot.Verifier.Examples.Engine
    Copilot.Verifier.Examples.FPOps
    Copilot.Verifier.Examples.Heater
    Copilot.Verifier.Examples.IntOps
    Copilot.Verifier.Examples.Structs
    Copilot.Verifier.Examples.Voting
    Copilot.Verifier.Examples.WCV

executable verify-examples
  import: bldflags

  hs-source-dirs: exe
  main-is: VerifyExamples.hs
  build-depends:
    case-insensitive,
    copilot-verifier,
    copilot-verifier-examples,
    optparse-applicative

test-suite copilot-verifier-test
  import: bldflags

  type: exitcode-stdio-1.0
  hs-source-dirs: test
  build-depends:
    case-insensitive,
    copilot-verifier,
    copilot-verifier-examples,
    tasty >= 0.10,
    tasty-hunit >= 0.10
  main-is: Test.hs
